--- a/public/index.html
+++ b/public/index.html
@@ -33,15 +33,15 @@
                             <div class="col-lg-12">
                                 <form style="display: block;">
                                     <div class="form-group">
-                                        <input type="text" name="username" ng-model="userName.text" tabindex="1" class="form-control" placeholder="Usuário" value="">
+                                        <input type="text" name="username" ng-model="userName.text" tabindex="1" class="form-control" placeholder="Username" value="">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="passwd" ng-model="userPasswd.text" tabindex="2" class="form-control" placeholder="Senha">
+                                        <input type="password" name="passwd" ng-model="userPasswd.text" tabindex="2" class="form-control" placeholder="Password">
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <button type="submit" class="form-control btn btn-info" ng-click="login()">Entrar</button>
+                                                <button type="submit" class="form-control btn btn-info" ng-click="login()">Enter</button>
                                             </div>
                                         </div>
                                     </div>
