creating sticky note view

--- a/app-client/app/index.html
+++ b/app-client/app/index.html
@@ -2,7 +2,7 @@
 <html ng-app="lembreteApp">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lembrete</title>
+    <title>Reminder</title>
 </head>
 <body>
 
@@ -12,5 +12,6 @@
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="login/login.js"></script>
+    <script src="sticky-note/sticky-note.js"></script>
 </body>
 </html>
