creating sticky note view

--- a/app-client/app/index.html
+++ b/app-client/app/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reminder</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
